🐛 fix: fixes cors config issues, jwt secret length and front/back password length mismatch